--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,2 @@
 
-.gradle/8.1.1/checksums/checksums.lock
-.gradle/8.1.1/checksums/md5-checksums.bin
-.gradle/8.1.1/checksums/sha1-checksums.bin
+.gradle/*
