--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,25 @@
-.gradle/
-run/
-/.gradle
-.gradle/8.1.1/checksums/checksums.lock
+# eclipse
+bin
+*.launch
+.settings
+.metadata
+.classpath
+.project
+
+# idea
+out
+*.ipr
+*.iws
+*.iml
+.idea
+
+# gradle
+build
+.gradle
+
+# other
+eclipse
+run
+
+# Files from Forge MDK
+forge*changelog.txt
